--- a/index.html
+++ b/index.html
@@ -1,1 +1,223 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>Research Methods</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .circle-outer {
+            width: 100%;
+            padding-top: 100%;
+            /* This will make the height equal to the width */
+            position: relative;
+            border-radius: 50%;
+            background-color: #51247a;
+        }
+
+        .circle-inner {
+            position: absolute;
+            top: 10%;
+            left: 10%;
+            width: 80%;
+            height: 80%;
+            border-radius: 50%;
+            background-color: #fff;
+        }
+
+        .circle-section {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 10%;
+            /* Adjust as needed */
+            height: 10%;
+            /* Adjust as needed */
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transform: translate(-50%, -50%) rotate(calc(360deg / 7 * (var(--i) - 1) - 90deg)) translate(570%) rotate(calc(-360deg / 7 * (var(--i) - 1) + 90deg));
+            transform-origin: center;
+        }
+
+        .circle-middle {
+            border-radius: 50%;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            /* Ensure the container takes full height */
+        }
+
+        /* Hide all lists initially */
+        .list-unstyled {
+            display: none;
+        }
+
+        /* Set the opacity of inactive links to 0.7 */
+        .circle-section {
+            opacity: 0.7;
+        }
+
+        /* Set the opacity of the active link to 1 */
+        .circle-section.active {
+            opacity: 1;
+        }
+
+        /* Set the opacity of a link to 1 when it's hovered over */
+        .circle-section:hover {
+            opacity: 1;
+        }
+
+        a.circle-section {
+            text-decoration: none;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-md-8 col-sm-12">
+                <div class="circle-outer border border-3 border-dark d-flex align-items-center justify-content-center">
+                    <div class="circle-inner border border-3 border-dark d-flex align-items-center justify-content-center">
+                        <!--<button class="circle-section bg-primary" style="--i:1;">
+                            <i class="fas fa-1 text-white"></i>
+                        </button>
+                        <button class="circle-section bg-secondary" style="--i:2;">
+                            <i class="fas fa-2 text-white "></i>
+                        </button>
+                        <button class="circle-section text-bg-dark" style="--i:3;">
+                            <i class="fas fa-3 text-white "></i>
+                        </button>
+                        <button class="circle-section text-bg-info" style="--i:4;">
+                            <i class="fas fa-4"></i>
+                        </button>
+                        <button class="circle-section text-bg-success" style="--i:5;">
+                            <i class="fas fa-5 text-white "></i>
+                        </button>
+                        <button class="circle-section text-bg-danger" style="--i:6;">
+                            <i class="fas fa-6 text-white "></i>
+                        </button>
+                        <button class="circle-section text-bg-warning" style="--i:7;">
+                            <i class="fas fa-7"></i>
+                        </button>-->
+                        <a href="#" class="circle-section bg-primary active" style="--i:1;" data-target="#1-link-list" title="Step 1"><i class="fas fa-1 text-white"></i></a>
+                        <a href="#" class="circle-section bg-secondary" style="--i:2;" data-target="#2-link-list" title="Step 2"><i class="fas fa-2 text-white"></i></a>
+                        <a href="#" class="circle-section bg-info" style="--i:3;" data-target="#3-link-list" title="Step 3"><i class="fas fa-3 text-white"></i></a>
+                        <a href="#" class="circle-section bg-dark" style="--i:4;" data-target="#4-link-list" title="Step 4"><i class="fas fa-4 text-white"></i></a>
+                        <a href="#" class="circle-section bg-success" style="--i:5;" data-target="#5-link-list" title="Step 5"><i class="fas fa-5 text-white"></i></a>
+                        <a href="#" class="circle-section bg-warning" style="--i:6;" data-target="#6-link-list" title="Step 6"><i class="fas fa-6 text-white"></i></a>
+                        <a href="#" class="circle-section bg-danger" style="--i:7;" data-target="#7-link-list" title="Step 7"><i class="fas fa-7 text-white"></i></a>
+                        <div class="circle-middle">
+                            <ul id="1-link-list" class="list-unstyled" style="display: block;">
+                                <li><a href="1link1#">a1</a></li>
+                                <li><a href="1link2#">a2</a></li>
+                                <li><a href="1link3#">a3</a></li>
+                                <li><a href="1link4#">a4</a></li>
+                                <li><a href="1link5#">a5</a></li>
+                            </ul>
+                            <ul id="2-link-list" class="list-unstyled">
+                                <li><a href="2link1#">b1</a></li>
+                                <li><a href="2link2#">b2</a></li>
+                                <li><a href="2link3#">b3</a></li>
+                                <li><a href="2link4#">b4</a></li>
+                                <li><a href="2link5#">b5</a></li>
+                            </ul>
+                            <ul id="3-link-list" class="list-unstyled">
+                                <li><a href="3link1#">c1</a></li>
+                                <li><a href="3link2#">c2</a></li>
+                                <li><a href="3link3#">c3</a></li>
+                                <li><a href="3link4#">c4</a></li>
+                                <li><a href="3link5#">c5</a></li>
+                            </ul>
+                            <ul id="4-link-list" class="list-unstyled">
+                                <li><a href="4link1#">d1</a></li>
+                                <li><a href="4link2#">d2</a></li>
+                                <li><a href="4link3#">d3</a></li>
+                                <li><a href="4link4#">d4</a></li>
+                                <li><a href="4link5#">d5</a></li>
+                            </ul>
+                            <ul id="5-link-list" class="list-unstyled">
+                                <li><a href="5link1#">e1</a></li>
+                                <li><a href="5link2#">e2</a></li>
+                                <li><a href="5link3#">e3</a></li>
+                                <li><a href="5link4#">e4</a></li>
+                                <li><a href="5link5#">e5</a></li>
+                            </ul>
+                            <ul id="6-link-list" class="list-unstyled">
+                                <li><a href="6link1#">f1</a></li>
+                                <li><a href="6link2#">f2</a></li>
+                                <li><a href="6link3#">f3</a></li>
+                                <li><a href="6link4#">f4</a></li>
+                                <li><a href="6link5#">f5</a></li>
+                            </ul>
+                            <ul id="7-link-list" class="list-unstyled">
+                                <li><a href="7link1#">g1</a></li>
+                                <li><a href="7link2#">g2</a></li>
+                                <li><a href="7link3#">g3</a></li>
+                                <li><a href="7link4#">g4</a></li>
+                                <li><a href="7link5#">g5</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('load', function () {
+            document.getElementById('1-link-list').style.display = 'block'
+        })
+        // Get all the circle-section elements
+        const sections = document.querySelectorAll('.circle-section');
+
+        // Add click event listeners to the sections
+        sections.forEach((section, index) => {
+            section.addEventListener('click', () => {
+                // Hide all the lists
+                document.querySelectorAll('.list-unstyled').forEach(list => {
+                    list.style.display = 'none';
+                });
+
+                // Show the list corresponding to the clicked section
+                document.getElementById(`${index + 1}-link-list`).style.display = 'block';
+            });
+        });
+        window.addEventListener('resize', positionLinks);
+
+        function positionLinks() {
+            var circleOuter = document.querySelector('.circle-outer');
+            var circleSections = document.querySelectorAll('.circle-section');
+
+            circleSections.forEach(function (circleSection, i) {
+                var translateValue = circleOuter.offsetWidth * 0.448; // Adjust as needed
+                circleSection.style.transform = 'translate(-50%, -50%) rotate(' + (360 / 7 * i - 90) + 'deg) translate(' + translateValue + 'px) rotate(' + (-360 / 7 * i + 90) + 'deg)';
+            });
+        }
+
+        positionLinks();
+        // Get all the circle sections
+        const circleSections = document.querySelectorAll('.circle-section');
+
+        // Add a click event listener to each circle section
+        circleSections.forEach((section) => {
+            section.addEventListener('click', function () {
+                // Remove the active class from all circle sections
+                circleSections.forEach((section) => {
+                    section.classList.remove('active');
+                });
+
+                // Add the active class to the clicked circle section
+                this.classList.add('active');
+            });
+        });
+    </script>
+</body>
+
+</html>
